testing/macro-tests/tests/ui/store_heap_reserved.stderr
error: storage(heap) must be written as storage(heap())
  --> tests/ui/store_heap_reserved.rs:10:13
   |
10 |     storage(heap)
   |             ^^^^
